fixed broken lints
